--- a/part_3/score2.yaml
+++ b/part_3/score2.yaml
@@ -6,6 +6,8 @@ containers:
     image: ghcr.io/astromechza/dynamo-db-todos:v1.3.0
     variables:
       MOTD: "Hello $${context.org_id} $${context.project_id} $${context.env_id}"
+      TABLE_NAME: ${resources.todos-table.name}
+      TABLE_REGION: ${resources.todos-table.region}
 service:
   ports:
     web:
@@ -19,3 +21,9 @@ resources:
     params:
       hostname: ${resources.dns.hostname}
       port: 80
+  todos-table:
+    type: dynamodb-table3
+    params:
+      hash_key: Id
+      range_key: CreatedAtEpoch
+      range_key_type: N
